--- a/style.css
+++ b/style.css
@@ -1,5 +1,40 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  /* width: 100%;
+  height: 100%; */
+  margin: auto;
+}
+
+header {
+  text-align: center;
+}
+
+#featured-property {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#featured-property > figure {
+  text-align: center;
+  font-size: smaller;
+}
+
+nav > a {
+  padding: 10px;
+  background: #808080;
+}
+
+#featured-property > p {
+  width: 800px;
+  text-align: center;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  margin: auto;
+}
+
+#details > div {
+  float: left;
+  background-color: #ff0000;
+  width: 25%;
+  text-align: center;
 }
